--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.1.10",
     "chart.js": "^2.9.4",
     "node-sass": "^4.14.1",
+    "numeral": "^2.0.6",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^2.8.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
