--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chart.js": "^2.9.4",
+    "leaflet": "^1.7.1",
     "node-sass": "^4.14.1",
     "numeral": "^2.0.6",
     "react": "^17.0.1",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-leaflet": "^2.8.0",
     "react-scripts": "4.0.0",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
